modules/apps/foundation/frontend-theme/frontend-theme-styled/src/main/resources/META-INF/resources/_styled/css/application/_dialog.scss
.dialog-bd {
	min-height: 30px;
}

.dialog-content {
	border: 1px solid #C8C9CA;
	padding: 5px;
}

.dialog-iframe-popup {
	.contacts-portlet .portlet-configuration-container .form {
		position: static;
	}

	.portlet-body,
	.portlet-boundary,
	.portlet-column,
	.portlet-layout {
		height: 100%;
	}

	.portlet-column {
		position: static;
	}

	.dialog-body,
	.export-dialog-tree,
	.lfr-dynamic-uploader,
	.lfr-form-content,
	.portlet-configuration-body-content,
	.process-list,
	.roles-selector-body {
		> .container-fluid-1280 {
			padding-top: 20px;
		}

		> .lfr-nav + .container-fluid-1280 {
			padding-top: 0;
		}
	}

	.lfr-form-content {
		padding: 15px;
	}

	.login-container {
		padding: $modal-inner-padding;
	}

	.management-bar-default,
	.navbar-default {
		border-left-width: 0;
		border-radius: 0;
		border-right-width: 0;
		border-top-width: 0;
		margin-bottom: 0;
	}

	.navbar ~ .portlet-configuration-setup,
	.portlet-export-import-container {
		height: calc(100% - #{$dialog-navbar-height});
		position: relative;

		@include sm {
			height: calc(100% - #{$dialog-desktop-navbar-height});
		}
	}

	.panel-group .panel {
		border-left-width: 0;
		border-radius: 0;
		border-right-width: 0;
	}

	.panel-group .panel + .panel {
		border-top-width: 0;
		margin-top: 0;
	}

	.panel-heading {
		border-top-left-radius: 0;
		border-top-right-radius: 0;
	}

	.portlet-configuration-setup {
		.lfr-nav {
			margin-left: auto;
			margin-right: auto;
			max-width: 1280px;
			padding-left: 3px;
			padding-right: 3px;

			@include sm {
				padding-left: 8px;
				padding-right: 8px;
			}
		}
	}

	.export-dialog-tree,
	.lfr-dynamic-uploader,
	.process-list,
	.roles-selector-body {
		bottom: 0;
		display: block;
		left: 0;
		overflow: auto;
		position: absolute;
		right: 0;
		top: $dialog-navbar-height;
		-webkit-overflow-scrolling: touch;

		@include sm {
			top: $dialog-desktop-navbar-height;
		}
	}

	.portlet-export-import-publish-processes {
		top: 0;
	}
}

.dialog-with-footer {
	#main-content, #wrapper {
		height: calc(100% - #{$dialog-footer-height-mobile});

		@include sm {
			height: calc(100% - #{$dialog-footer-height});
		}
	}

	.button-holder {
		&.dialog-footer {
			background-color: $dialog-footer-bg;
			border-top: 1px solid $dialog-footer-border-color;
			bottom: 0;

			@if (variable-exists(dialog-footer-box-shadow)) {
				box-shadow: $dialog-footer-box-shadow;
			}

			left: 0;
			margin: 0;
			padding: 10px 15px;
			position: fixed;
			width: 100%;

			@include md {
				background-color: $dialog-desktop-footer-bg;
			}
		}

		.btn-lg {
			@include media-query(null, $screen-xs-max) {
				font-size: 12px;
				padding: 8px 24px;
			}
		}
	}

	.blog-article-button-row,
	.journal-article-button-row,
	.kb-submit-buttons {
		.btn-lg {
			@include media-query(null, $screen-xs-max) {
				padding-left: 16px;
				padding-right: 16px;
			}
		}
	}

	.dialog-body,
	.export-dialog-tree,
	.lfr-dynamic-uploader,
	.lfr-form-content,
	.portlet-configuration-body-content,
	.roles-selector-body {
		@include md {
			padding-bottom: $dialog-footer-height;
		}
	}

	.portlet-configuration-edit-permissions {
		.portlet-configuration-body-content {
			overflow: visible;

			> form {
				height: calc(100% - #{$management-bar-height});
				max-width: none;
				overflow: auto;

				@include sm {
					@if (variable-exists(atlas-theme)) {
						height: calc(100% - #{$management-bar-desktop-height});
					}
				}
			}

			.table-responsive {
				border-width: 0;
				width: auto;
			}

			.taglib-search-iterator-page-iterator-bottom {
				@include sm {
					margin-bottom: 20px;
				}
			}
		}
	}

	.lfr-dynamic-uploader.hide-dialog-footer {
		bottom: 0;

		+ .dialog-footer {
			display: none;
		}
	}

	.portlet-configuration-edit-templates .portlet-configuration-body-content {
		bottom: 0;
	}
}

